@@ -6,6 +6,7 @@ EBUILD rider-2018.2.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0
 EBUILD rider-2019.1.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0cb8f6875c4ea845cb068113b68b568c06cbb1cea76fa383ae20c3c9f0e7be4dcd4063f7bfe573a9ac7fd616a8 SHA512 14a84a709f8b91d1ab9aa6df130b7ddf47db690ec86cf61815ac2113df1dbaf69c7d55288028140e430537e4743c607b388c4f0f4d911788e930a94640cb429a
 EBUILD rider-2019.2.3.ebuild 842 BLAKE2B d69875dd733ad7c70f5e51dae4662b0d43d48d0cb8f6875c4ea845cb068113b68b568c06cbb1cea76fa383ae20c3c9f0e7be4dcd4063f7bfe573a9ac7fd616a8 SHA512 14a84a709f8b91d1ab9aa6df130b7ddf47db690ec86cf61815ac2113df1dbaf69c7d55288028140e430537e4743c607b388c4f0f4d911788e930a94640cb429a
 EBUILD rider-2020.2.2-r1.ebuild 797 BLAKE2B 4dfac988c6dccc30a4badc61a7162f489e3f77a4a4c6887a955b61eb0756dfc6dc6ef86271cc07933054868a35574c8d978f73ba1115f35d0a6f8840ceb360f4 SHA512 c9f0549c62da4a573edf9c8dd91ae6ae82b86e2e2eafc538936b0ea47e6eafd42010a0b259bf1559ea5d5cbaea9904f479e96bb107701a9ebf174aa19a10760d
+EBUILD rider-2020.2.2-r2.ebuild 814 BLAKE2B 87677f08e1e7b2b12ac07e5b201a973899f4044963122b733d267181101b1fb392f60d776170c31f3dc2ce31504e40914326f251548b3a32e7e4604956d17395 SHA512 2f210ae28a2753815311361534b303cb0cd0530d9dbfc6d40d8752423cf77babaf0be9b6891437d4dc2a0695d617a6101194008ef538f8030c52f601b7e417d5
 EBUILD rider-2020.2.2.ebuild 682 BLAKE2B 00f39569ec185b825032abebe7f7f12bbc6a661667154cdf6697fae9a747415fb12d5a141ee89f1ab085f646724006d9ac5076b5340788e0f8dba20d2bf31a9d SHA512 73a3868060f975dba5f89b4106711a90943fb9c5e2043bb071933ebca59a877671941b23dfd295b7f56bc04d12cd4dd7d9eb01badb1a5f7291019fcd00699d63
-MISC ChangeLog 362 BLAKE2B 3aa04626dfc6f77e2918b16079840812ea7f9e25c4187c710fc83557893e7b6c3db58d2484ef5b1cbec41104fcc79297845ac04a50e5cdfa1e91f2c3a01fc0d3 SHA512 51d09fe2c424b0b433cc09045508cd8ba748ee4a5b6b8c646ed986321e1ec07cf9f896ca7d5545f1c3b0bcb163b329d061367341239804fbfd1a00a775de6b2e
+MISC ChangeLog 418 BLAKE2B 50fb9bd519c244496f8d80aa8b8e5ff0e8839044a40a0f7ec8397b0bd4a1559ea14edf4780a34b79fa211bb1aa0ad80df0e1c8a24056d899ec6e2451dd51072e SHA512 f37d1239cfdda338d08e11408e470d17e8fbfcb8b45d94a9860f342ca341e841f6b6d493fee080db4b97b124f2151a11da473820cb09eed335f078477b293fa8
 MISC metadata.xml 355 BLAKE2B 4417453e121caa89335391cb93ec970c11742c75f3b27e42c6a44a3a63ecddb3c9564e548951cbeba6b3e3b92e3c28aca42809ff0ea87ee2347813806afebe65 SHA512 e7f50a72df33c1a880ce33a26ea0ed8e26655c0acdc8d3b5ba33c3d2abb3afd1fab87734e2c9c98e5702a54ba7d2e92271c19a066f06372fab0b1b3362fabcc6
